2005-06-15  Dave Brolley  <brolley@redhat.com>

	Contribute Morpho ms1 on behalf of Red Hat
	* ms1-asm.c, ms1-desc.c, ms1-dis.c, ms1-ibld.c, ms1-opc.c, 
	ms1-opc.h: New files, Morpho ms1 target.

	2004-05-14  Stan Cox  <scox@redhat.com>

	* disassemble.c (ARCH_ms1): Define.
	(disassembler): Handle bfd_arch_ms1

	2004-05-13  Michael Snyder  <msnyder@redhat.com>

	* Makefile.am, Makefile.in: Add ms1 target.
	* configure.in: Ditto.

2005-06-08  Zack Weinberg  <zack@codesourcery.com>

	* arm-opc.h: Delete; fold contents into ...
	* arm-dis.c: ... here.  Move includes of internal COFF headers
	next to includes of internal ELF headers.
	(streq, WORD_ADDRESS, BDISP, BDISP23): Delete, unused.
	(struct arm_opcode): Rename struct opcode32.  Make 'assembler' const.
	(struct thumb_opcode): Rename struct opcode16.  Make 'assembler' const.
	(arm_conditional, arm_fp_const, arm_shift, arm_regname, regnames)
	(iwmmxt_wwnames, iwmmxt_wwssnames):
	Make const.
	(regnames): Remove iWMMXt coprocessor register sets.
	(iwmmxt_regnames, iwmmxt_cregnames): New statics.
	(get_arm_regnames): Adjust fourth argument to match above changes.
	(set_iwmmxt_regnames): Delete.
	(print_insn_arm): Constify 'c'.  Use ISO syntax for function
	pointer calls.  Expand sole use of BDISP.  Use iwmmxt_regnames
	and iwmmxt_cregnames, not set_iwmmxt_regnames.
	(print_insn_thumb16, print_insn_thumb32): Constify 'c'.  Use
	ISO syntax for function pointer calls.

2005-06-07  Zack Weinberg  <zack@codesourcery.com>

	* arm-dis.c: Split up the comments describing the format codes, so
	that the ARM and 16-bit Thumb opcode tables each have comments
	preceding them that describe all the codes, and only the codes,
	valid in those tables.  (32-bit Thumb table is already like this.)
	Reorder the lists in all three comments to match the order in
	which the codes are implemented.
	Remove all forward declarations of static functions.  Convert all
	function definitions to ISO C format.